--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "statechart-watch",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "homepage": "https://andyjakubowski.github.io/statechart-watch",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@xstate/react": "^1.0.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "web-vitals": "^1.0.1",
-    "xstate": "^4.16.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "web-vitals": "^2.1.4",
+    "xstate": "^4.34.0",
+    "@xstate/react": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,7 +37,11 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "node-sass": "4.14.1"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react-scripts": "5.0.1",
+    "gh-pages": "^4.0.0",
+    "sass": "^1.56.1"
   }
 }
